add text for fusion

--- a/fusion.html
+++ b/fusion.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Intuition Fabric (iFab): Disruption</title>
+		<title>Intuition Fabric (Intuition Fabric): Disruption</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -53,7 +53,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Fusion</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>The combination of Deep Learning and Blockchain technologies will be exponential.</p>
 						</header>
 						<div class="row 150%">
 							<div class="8u 12u$(medium)">
@@ -61,18 +61,52 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/thinking.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
+										<h3>Inovative Adaptive Learning Architecture</h3>
+
+										<p>
+											The Intuition Fabric architecture supports advanced Deep Learning with a innovative approach that is
+											based on Meta Learning, Modular Deep Learning and Game Theoretic Coordination. 
+											A Meta Model serves as the vocabulary
+											for designing this new kind of architecture. A language driven approach, manifested as a Domain Specific Language
+											(DSL) that uses as its words the Meta Model. A Virtual Machine for executing computational graphs that comes from
+											the DSL. The connectivity of the fabric has a P2P foundation based on IPFS and Ethereum.
+										</p>
+										<p>In this section we describe the distributed architecture of the Intuition Fabric.  
+											Intuition Fabric leverages the rich set of decentralized mechanisms provided by the Interplanetary Filesystem (IPFS).   
+											Furthermore, to drive behavior in a market driven architecture, 
+											Ethereum is employed to build incentives to drive the exponential growth of the platform.
+										</p>
+										<p>
+											IPFS is a more resilient and faster protocol than HTTP. Intuition Fabric uses IPFS peer-to-peer, distributed file system to store computational
+											graph and training data. Data is no longer available only a local server but distributed across peers in the IPFS
+											network. This improves availability of the computational graph making it always available to users of the graph.
+											IPFS also provides better discovery of other computational graphs. IPFS has other benefits such as the standardization
+											of merkle tree and hash chain inspired data structures (see: IPLD). Libp2p, an extensive networking stack for
+											P2P is also worthy of building upon. The libp2p stack provides support for content routing, peer routing, discovery,
+											multiple transports and NAT traversal. These features allow for ease of deployment of Intuition Fabric in multiple contexts.
+										</p>
+										<p>
+
+											Ethereum provides a rich platform for developing innovative contracts using the primitives of identity, assets and data.
+											Gavin Wood has a good framework on how to define contracts. Wood’s framework consists of combining tree primitives
+											to be innovative smart contracts. 
+										</p>
+										<p>
+
+
+
+											There are many attributes that drive successful markets. Markets revolve around the activity of discovery. One cannot however
+											have good discovery without the existence of reputation. Therefore, this system treats reputation as a first class
+											object. What this means is that, not only do actors have reputations, the models in the computational graph have
+											“reputations” as well as the “data”.
+										</p>
+										<p>
+											Ethereum provides sufficient rich functionality to capture the incentive mechanisms required for Intuition Fabric. There are many market
+											participants in Intuition Fabric, and therefore a rich set of incentives may be required to support the growth of these markets.
+											Intuition Fabric will need to provide contracts to enable Reputation, Oracles, Certification, Asset Classification and Asset
+											Tracking.
+										</p>
+										
 									</section>
 
 							</div>
@@ -121,7 +155,7 @@
 						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (iFab) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (Intuition Fabric) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
