--- a/inequality.html
+++ b/inequality.html
@@ -127,7 +127,8 @@
 						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (iFab) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
+						<li><a href="disclaimer.html">Disclaimers</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
@@ -142,6 +143,17 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+
+			<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-101268401-1', 'auto');
+			ga('send', 'pageview');
+
+			</script>
 
 	</body>
 </html>
