--- a/blockchain.html
+++ b/blockchain.html
@@ -52,7 +52,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Partiipation enabled by Blockchain</h2>
+							<h2>Participation enabled by Blockchain</h2>
 							<p>Marketplace participants have their incentives aligned with the growth of the platform. </p>
 						</header>
 						<div class="row 150%">
