--- a/inequality.html
+++ b/inequality.html
@@ -52,7 +52,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Inequality</h2>
+							<h2>Inequality and Privacy Rights</h2>
 							<p></p>
 						</header>
 
