--- a/fusion.html
+++ b/fusion.html
@@ -61,7 +61,7 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/thinking.jpg" alt="" /></a>
-										<h3>Inovative Adaptive Learning Architecture</h3>
+										<h3>Innovative Adaptive Learning Architecture</h3>
 
 										<p>
 											The Intuition Fabric architecture supports advanced Deep Learning with a innovative approach that is
