--- a/inequality.html
+++ b/inequality.html
@@ -62,7 +62,7 @@
 								<h3>Monopolization of Artificial Intuition (AI) or Deep Learning (DL)</h3>
 								<p>Despite the overwhelming potential of DL and its possible benefits, 
 									it is still a &ldquo;Disruptive&rdquo; technology that is taking over operations 
-									of the most advanced technology companies in the world</p>
+									of the most advanced technology companies in the world.</p>
 								
 								<h3>Why is DL such a &ldquo;disruptive&rdquo; technology? 
 									&nbsp;Why is DL taking over the most advanced tech.
@@ -100,7 +100,8 @@
 								<blockquote>&ldquo;Even the big players talk about the tiny talent pool: Microsoft research chief Peter Lee says the cost of acquiring
 									a top AI researcher is comparable to the cost of acquiring an NFL quarterback.&rdquo;</blockquote>
 
-				   			    <p>As a result, Deep Learning is thriving in many of these giant corporations who are therefore monopolizing the DL technology and very possibly much of the resources, jobs, and control of our ecomomic future</p>
+								<p>As a result, Deep Learning is thriving in many of these giant corporations who are therefore monopolizing the DL technology
+									and very possibly much of the resources, jobs, and control of our economic future.</p>
                         
 							    <p>These firms have made heavy investments in deep learning. &nbsp;Different organizations have their different priorities in what they believe is important. The likely winner of the AI race will be the 
 									company that actually is lucky enough to have put resources into the winning approach! It is indeed very odd, &nbsp;given the high stakes involved, that there is an implicit gamble every firm is willing 
@@ -120,9 +121,9 @@
 									This clearly is unacceptable.
 								</p>
 								<p>Intuition Fabric with its feature of decentralized ownership of AI permits us to keep our privacy while having access to the best Deep
-									Learning capabilities. This is because the code for the AI is a shared common that is accessible from anywhere. A user can
+									Learning capabilities. This is because the code for the AI is a shared common good that is accessible from anywhere. A user can
 									thus execute the code in one’s private sandbox or can use trusted providers to execute code. Therefore revealing only the
-									minimal necessary to another party.
+									minimal amount necessary to another party.
 								</p>
 								<h3>AI vs AI</h3> 
 								<p>
