fix grammar and spelling

--- a/blockchain.html
+++ b/blockchain.html
@@ -5,25 +5,27 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>iFab: Intuition Fabric: Fusion</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
-		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Intuition Fabric<small>&trade;</small></a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<!--
+<head>
+	<title>iFab: Intuition Fabric: Fusion</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+
+<body>
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header">
+			<h1 id="logo"><a href="index.html">Intuition Fabric<small>&trade;</small></a></h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<!--
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
@@ -44,22 +46,22 @@
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
 							-->
-						</ul>
-					</nav>
+				</ul>
+			</nav>
+		</header>
+
+		<!-- Main -->
+		<div id="main" class="wrapper style1">
+			<div class="container">
+				<header class="major">
+					<h2>Participation enabled by Blockchain</h2>
+					<p>Marketplace participants have their incentives aligned with the growth of the platform. </p>
 				</header>
+				<div class="row 150%">
+					<div class="4u 12u$(medium)">
 
-			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<header class="major">
-							<h2>Participation enabled by Blockchain</h2>
-							<p>Marketplace participants have their incentives aligned with the growth of the platform. </p>
-						</header>
-						<div class="row 150%">
-							<div class="4u 12u$(medium)">
-
-								<!-- Sidebar -->
-								    <!--
+						<!-- Sidebar -->
+						<!--
 									<section id="sidebar">
 										<section>
 											<h3>Magna Feugiat</h3>
@@ -80,88 +82,101 @@
 									</section>
 									-->
 
-							</div>
-							<div class="8u$ 12u$(medium) important(medium)">
+					</div>
+					<div class="8u$ 12u$(medium) important(medium)">
 
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/blockchain3.jpg" alt="" /></a>
-										<h3>Architecture of Participation</h3>
-										<p>Intuition Fabric is designed to enhance the value of actors in its marketplace. 
-											Intuition Fabric is essentially a market of codified thought and ideas.  
-											Said differently, it is a knowledge market.   
-											This knowledge does not remain static, but rather is dynamic.  
-											The interactions of actors in this market enhanced the knowledge contained in the market.  
-											Making it gradually increase in value over time.
+						<!-- Content -->
+						<section id="content">
+							<a href="#" class="image fit"><img src="images/blockchain3.jpg" alt="" /></a>
+							<h3>Architecture of Participation</h3>
+							<p>Intuition Fabric is designed to enhance the value of actors in its marketplace. Intuition Fabric is essentially a
+								market of codified thought and ideas. Said differently, it is a knowledge market. This knowledge does not remain
+								static, but rather is dynamic. The interactions of actors in this market will enhance the knowledge contained in
+								the market, therefore making it gradually increase in value over time.
+							</p>
+							<h3>Market Participants</h3>
+							<p>We envision many kinds of participants in this market, including the following:
+							</p>
 
-										</p>
-										<h3>Market Participants</h3>
-										<p> We envision many kinds of participants:</p>  
+							<ul>
+								<li><b>Consumers</b> - These are actors that request from Reasoners inferencing contextual data that they the Consumer
+									provides. The contextual data may be provided with different levels of privacy requirements.
+								</li>
+								<li><b>Contractors</b> - Are also consumers, however their requirements are for other actors to train new models on the
+									data they provide. The models that are created are published into the global computational graph.
+								</li>
+								<li><b>Trainers</b> - Trainers are computational resources that are able to create new models at the request of Contractors.
+								</li>
+								<li><b>Curators</b> - Are also Trainers, however they work towards consolidating the models in the computational graph.
+								</li>
+								<li><b>Reasoners</b> - Are computational resources that execute the models that already are present in the computational
+									graph. A Reasoner may be local or remote.
+								</li>
+								<li><b>Auditors</b> - Are services that validate the authenticity of the work of Curators.
+								</li>
+								<li><b>Information Providers</b> - Are services that make external data accessible to the system.
+							</ul>
+							<p>Networking effects are what will drive participation by actors in this market. The initial value that will be created is
+								a consequence of designing an “architecture of participation”. This implies that frictionless participation must
+								be made available to different actors. More concretely, this means that the user interfaces and tooling be made conveniently
+								available.
 
-<ul>
-											<li><b>Consumers</b> - These are actors that request from Reasoners inferencing contextual data that they the Consumer provides.  The contextual data may be provided with different levels of privacy requirements.
- </li>
-<li><b>Contractors</b> - Are also consumers, however their requirements is for other actors to train new models on the data they provide.  The models that are created are published into the global computational graph.
- </li>
-<li><b>Trainers</b> - Trainers are computational resources that are able to create new models at the request of Contractors.
- </li>
-<li><b>Curators</b> - Are also Trainers, however work towards consolidating the models in the computational graph. 
- </li>
-<li><b>Reasoners</b> - Are computational resources that execute the models that already are present in the computational graph.  A Reasoner may be local or remote.  
- </li>
-    <li><b>Auditors</b> - Are services that validate the authenticity of the work of Curators.
- </li>
-    <li><b>Information Providers</b> - Are services that make external data accessible to the system.
-										</ul>
-										<p>Networking effects are what will drive participation by actors in this market.  The initial value that will be created in a consequence of designing a “architecture of participation”.   This implies that frictionless participation must be made available to different actors.  More concretely, this means that the user interfaces and tooling be made conveniently available.  
-										</p><p> 
-An architecture of participation combined with carefully designed incentive structures can lead to organic and sustainable growth of the system.  Ease of access to Artificial Intuition (i.e. Deep Learning) will only grow exponentially over time.  This market will ride the coattails of this market expansion.
- </p>
-									</section>
 
-							</div>
-						</div>
+							</p>
+							<p>
+								 An architecture of participation combined with carefully designed incentive structures can lead to organic and sustainable
+								growth of the system. Ease of access to Artificial Intuition (i.e. Deep Learning) will only grow exponentially over
+								time. This market will ride the coattails of the expansion of the AI technology.
+							</p>
+						</section>
+
 					</div>
 				</div>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						
-						<li><a href="https://www.medium.com/intuitionmachine" class="icon alt fa-medium"><span class="label">Twitter</span></a></li>
-						<li><a href="https://twitter.com/IntuitMachine" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/groups/deeplearningpatterns" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/IntuitionFabricOrg" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
-						<li><a href="disclaimer.html">Disclaimers</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+
+				<li><a href="https://www.medium.com/intuitionmachine" class="icon alt fa-medium"><span class="label">Twitter</span></a></li>
+				<li><a href="https://twitter.com/IntuitMachine" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/groups/deeplearningpatterns" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/IntuitionFabricOrg" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Intuition Machine Inc. All rights reserved.</li>
+				<li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
+				<li><a href="disclaimer.html">Disclaimers</a></li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
 
-			<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-			ga('create', 'UA-101268401-1', 'auto');
-			ga('send', 'pageview');
+		ga('create', 'UA-101268401-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+</body>
 
-			</script>
-	</body>
 </html>
