--- a/fusion.html
+++ b/fusion.html
@@ -64,7 +64,7 @@
 										<h3>Innovative Adaptive Learning Architecture</h3>
 
 										<p>
-											The Intuition Fabric architecture supports advanced Deep Learning with a innovative approach that is
+											The Intuition Fabric architecture supports advanced Deep Learning with an innovative approach that is
 											based on Meta Learning, Modular Deep Learning and Game Theoretic Coordination. 
 											A Meta Model serves as the vocabulary
 											for designing this new kind of architecture. A language driven approach, manifested as a Domain Specific Language
@@ -78,7 +78,7 @@
 										</p>
 										<p>
 											IPFS is a more resilient and faster protocol than HTTP. Intuition Fabric uses IPFS peer-to-peer, distributed file system to store computational
-											graph and training data. Data is no longer available only a local server but distributed across peers in the IPFS
+											graph and training data. Data is no longer available only on a local server but distributed across peers in the IPFS
 											network. This improves availability of the computational graph making it always available to users of the graph.
 											IPFS also provides better discovery of other computational graphs. IPFS has other benefits such as the standardization
 											of merkle tree and hash chain inspired data structures (see: IPLD). Libp2p, an extensive networking stack for
