--- a/index.html
+++ b/index.html
@@ -258,13 +258,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						
 						<li><a href="https://www.medium.com/intuitionmachine" class="icon alt fa-medium"><span class="label">Twitter</span></a></li>
 						<li><a href="https://twitter.com/IntuitMachine" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/groups/deeplearningpatterns" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/IntuitionFabricOrg" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.getrevue.co/profile/intuitionmachine" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
