fix icon for telegram

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/IntuitionFabricOrg" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="http://intuitionfabric.slack.com" class="icon alt fa-slack"><span class="label">Slack</span></a></li>
-						<li><a href="http://www.telegram.me/intuitionfabric" class="icon alt fa-telegram"><span class="label">Slack</span></a></li>
+						<li><a href="http://www.telegram.me/intuitionfabric" class="icon alt fa-paper-plane"><span class="label">Slack</span></a></li>
 						<li><a href="https://www.getrevue.co/profile/intuitionmachine" class="icon alt fa-envelope"><span class="label">Newsletter</span></a></li>
 					</ul>
 					<ul class="copyright">
