--- a/blockchain.html
+++ b/blockchain.html
@@ -102,19 +102,19 @@
 								<li><b>Consumers</b> - These are actors that request from Reasoners inferencing contextual data that they the Consumer
 									provides. The contextual data may be provided with different levels of privacy requirements.
 								</li>
-								<li><b>Contractors</b> - Are also consumers, however their requirements are for other actors to train new models on the
-									data they provide. The models that are created are published into the global computational graph.
+								<li><b>Contractors</b> - Are also consumers, however their purpose is to direct other actors to train new models given 
+									data that contractors provide. The models that are created are published into the global computational graph.
 								</li>
-								<li><b>Trainers</b> - Trainers are computational resources that are able to create new models at the request of Contractors.
+								<li><b>Trainers</b> - Trainers provide computational resources that are able to create new models at the request of Contractors.
 								</li>
-								<li><b>Curators</b> - Are also Trainers, however they work towards consolidating the models in the computational graph.
+								<li><b>Curators</b> - Are also Trainers, however they work towards cataloging the models in the computational graph.
 								</li>
-								<li><b>Reasoners</b> - Are computational resources that execute the models that already are present in the computational
-									graph. A Reasoner may be local or remote.
+								<li><b>Reasoners</b> - Provide trusted computational resources that execute the models that already are present in the computational
+									graph. 
 								</li>
-								<li><b>Auditors</b> - Are services that validate the authenticity of the work of Curators.
+								<li><b>Auditors</b> - Provide services that validate the authenticity of the work of Curators, Trainers, Modelers and Contractors.
 								</li>
-								<li><b>Information Providers</b> - Are services that make external data accessible to the system.
+								<li><b>Knowledge Providers</b> - Contribute data and models to the platform. 
 							</ul>
 							<p>Networking effects are what will drive participation by actors in this market. The initial value that will be created is
 								a consequence of designing an “architecture of participation”. This implies that frictionless participation must
