update description of parties

--- a/blockchain.html
+++ b/blockchain.html
@@ -99,8 +99,8 @@
 							</p>
 
 							<ul>
-								<li><b>Consumers</b> - These are actors that request from Reasoners inferencing contextual data that they the Consumer
-									provides. The contextual data may be provided with different levels of privacy requirements.
+								<li><b>Consumers</b> - Are actors that provide personal contextual data to be processed by Reasoners.
+								 This contextual data may be provided with different levels of privacy requirements.
 								</li>
 								<li><b>Contractors</b> - Are also consumers, however their purpose is to direct other actors to train new models given 
 									data that contractors provide. The models that are created are published into the global computational graph.
