add sidebar info

--- a/disruptive.html
+++ b/disruptive.html
@@ -130,18 +130,31 @@
 							<div class="4u$ 12u$(medium)">
 
 								<!-- Sidebar -->
-								<!-- hide temporarilly
+								
 									<section id="sidebar">
 										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
+											<h3>Examples</h3>
+											<p>The idea is to build a democratized Deep Learning system that anyone with INT 
+												tokens have access to AI to perform their daily activities
+												while preserving their privacy. Here are a few examples:
+											</p>
+												<ul>
+												<li>Automatically reading personal and confidential email and replying.
+												</li><li>>Automatically categorizing one's own personal data.
+												</li><li>Advanced searching of confidential data.
+												</li><li>Conversion of confidential unstructured data into knowledge bases.
+												</li><li>Reducing information overload from confidential sources.
+												</li><li>Running prediction algorithms that monitor markets.
+												</li>
+												</ul>	
+												This list will continue to grow, so the value proposition is to provide 'frictionless' access 
+												to these capabilities while still preserving one's own privacy.  
+												So think of having an 'app store' of Deep Learning applications that you can make 
+												use of with your email reader or similar apps.
+												</p>
 										</section>
 										<hr />
+								<!--		
 										<section>
 											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 											<h3>Amet Lorem Tempus</h3>
@@ -153,7 +166,7 @@
 											</footer>
 										</section>
 									</section>
-								-->	
+								-->
 
 							</div>
 						</div>
@@ -200,6 +213,6 @@
 			ga('send', 'pageview');
 
 			</script>
-			
+
 	</body>
 </html>
