--- a/disruptive.html
+++ b/disruptive.html
@@ -140,7 +140,7 @@
 											</p>
 												<ul>
 												<li>Automatically reading personal and confidential email and replying.
-												</li><li>>Automatically categorizing one's own personal data.
+												</li><li>Automatically categorizing one's own personal data.
 												</li><li>Advanced searching of confidential data.
 												</li><li>Conversion of confidential unstructured data into knowledge bases.
 												</li><li>Reducing information overload from confidential sources.
