fix nvidia caption

--- a/disruptive.html
+++ b/disruptive.html
@@ -62,7 +62,7 @@
 									<section id="content">
 										<!--a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a-->
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/Dy0hJWltsyE" frameborder="0" allowfullscreen></iframe>
-										<small>A video on Deep Learning from Nvidia</small>
+										<br/><small>Deep Learning video from Nvidia</small>
 										<h3>What is Deep Learning (DL) and why is it important?</h3>
 										<p>To understand its importance in our world we have to begin to evaluate what is defined as Deep Learning and how this might
 											impact our day to day lives.
