--- a/inequality.html
+++ b/inequality.html
@@ -109,8 +109,10 @@
                         
 						        <p>Unfortunately, for a majority of the world&rsquo;s companies and population, most don&rsquo;t 
 									even know that the race exists! &nbsp;Even if they did know, just participating in the race has extremely low odds of success. &nbsp; Deep learning is reserved for the elite few and leading companies which will continue to guarantee that they will have the winning hand. &nbsp; 
-									Deep learning needs to be democratized in order to create a more equitable global society. </p>
+									Deep learning needs to be democratized in order to create a more equitable global society. The problem is
+									best illustrated by the following video:</p>
 
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/WSKi8HfcxEk" frameborder="0" allowfullscreen></iframe>
 
 							    <h3>Our Inalienable Right to Privacy</h3> 
 
