--- a/inequality.html
+++ b/inequality.html
@@ -20,9 +20,7 @@
 			<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Intuition Fabric<small>&trade;</small></a></h1>
-						<p>Despite the overwhelming potential of DL and its possible benefits, 
-									it is still a &ldquo;Disruptive&rdquo; technology that is taking over operations 
-									of the most advanced technology companies in the world.</p>
+						
 								
 					<nav id="nav">
 						<ul>
@@ -57,7 +55,9 @@
 					<div class="container">
 						<header class="major">
 							<h2>Inequality and Privacy Rights</h2>
-							<p></p>
+							<<p>Despite the overwhelming potential of DL and its possible benefits, 
+									it is still a &ldquo;Disruptive&rdquo; technology that is taking over operations 
+									of the most advanced technology companies in the world.</p>
 						</header>
 
 						<!-- Content -->
