--- a/inequality.html
+++ b/inequality.html
@@ -55,7 +55,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Inequality and Privacy Rights</h2>
-							<<p>Despite the overwhelming potential of DL and its possible benefits, 
+							<p>Despite the overwhelming potential of DL and its possible benefits, 
 									it is still a &ldquo;Disruptive&rdquo; technology that is taking over operations 
 									of the most advanced technology companies in the world.</p>
 						</header>
