--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
+						<li><a href="https://cryptovalley.swiss/member-directory/name/intuition-fabric/">Corporate Member of Crypto Valley</a></li>
 						<li><a href="disclaimer.html">Disclaimers</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
