change ifab logo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="content">
 						
 						<header>
-							<h2><img src="images/intuitionfabricv24.gif" height="150" width="150" alt="" /></h2>
+							<h2><img src="images/intuitionfabricvheader.png" height="150" width="150" alt="" /></h2>
 							<p>Democratized Deep Learning AI<br/>
 							on the Ethereum Blockchain.</p>
 
