--- a/disclaimer.html
+++ b/disclaimer.html
@@ -269,10 +269,10 @@ variations of the discussed risks or the emergence of new risk.<o:p></o:p></span
 						<li><a href="https://www.facebook.com/groups/deeplearningpatterns" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/IntuitionFabricOrg" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:info@codeaudit.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
+						<li>&copy; CodeAudit Corp. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li>
 						<li><a href="disclaimer.html">Disclaimers</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
