--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						<li><a href="https://www.getrevue.co/profile/intuitionmachine" class="icon alt fa-envelope"><span class="label">Newsletter</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Artificial Intuition Limited. All rights reserved.</li>
+						<li>&copy; CodeAudit Corp. All rights reserved.</li>
 						<li><a href="https://cryptovalley.swiss/member-directory/name/intuition-fabric/">Corporate Member of Crypto Valley</a></li>
 						<li><a href="disclaimer.html">Disclaimers</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li>In a world of peaches, don't ask for apple sauce</li>
